--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,7 @@
   'list list';
   grid-area: search;
   column-gap: 15px;
+  row-gap: 15px;
   box-sizing: border-box;
   font-size: 16px;
   margin: 0;
