--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 10vh auto 0;
+  margin: 0 auto;
   max-width: 600px;
 }
 
@@ -16,6 +16,13 @@
   text-align: left;
   padding: 0;
   grid-area: list;
+}
+
+.title {
+  margin: 10vh 0 20px;
+  font-size: 28px;
+  line-height: 40px;
+  color: #555;
 }
 
 .field {
@@ -35,10 +42,9 @@
 
 .input {
   grid-area: search;
-  min-height: 50px;
   border-radius: 5px;
   box-sizing: border-box;
-  padding: 12px;
+  padding: 0 12px;
   background-color: whitesmoke;
   font-size: 16px;
   margin: 0;
