--- a/src/components/CountrySearch/CountrySearch.css
+++ b/src/components/CountrySearch/CountrySearch.css
@@ -1,5 +1,5 @@
 .title {
-  margin: 10vh 0 20px;
+  margin: 10vh 0 12px;
   font-size: 28px;
   line-height: 40px;
   color: #555;
@@ -15,6 +15,7 @@
   display: grid;
   grid-template-columns: auto 70px;
   grid-template-areas:
+  'message message'
   'search quantity'
   'spinner spinner'
   'list list';
@@ -37,12 +38,29 @@
   border: 2px solid dodgerblue;
 }
 
+/* .input::placeholder {
+  color: red;
+} */
+
 .list {
   list-style-type: none;
   text-align: left;
   padding: 0;
   grid-area: list;
-  /* border: 1px solid gainsboro; */
   border-radius: 5px;
   background-color: whitesmoke;
+}
+
+.message-rule {
+  grid-area: message;
+  height: 16px;
+  font-size: 12px;
+  line-height: auto;
+  color: gray;
+  margin: 0;
+}
+
+.warn {
+  color: red;
+  text-decoration: underline;  
 }
