Refactoring with redux

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -2,12 +2,18 @@
   text-align: center;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  margin: 0 auto;
-  max-width: 600px;
   padding: 0 20px;
+  position: relative;
+  align-items: center;
 }
 
 .App-link {
   color: #61dafb;
+}
+
+.map-container {
+  width: 80vw;
+  height: auto;
+  position: absolute;
+  top: 20vw;
 }
