--- a/src/components/CountrySearch/CountrySearch.css
+++ b/src/components/CountrySearch/CountrySearch.css
@@ -1,5 +1,13 @@
+.search-items {
+  margin-top: 10vh;
+  max-width: 600px;
+  width: 100%;
+  align-self: center;
+  z-index: 5;
+}
+
 .title {
-  margin: 10vh 0 12px;
+  margin: 0 0 12px;
   font-size: 28px;
   line-height: 40px;
   color: #555;
@@ -11,53 +19,11 @@
   }
 }
 
-.form {
-  display: grid;
-  grid-template-columns: auto 70px;
-  grid-template-areas:
-  'message message'
-  'search quantity'
-  'spinner spinner'
-  'list list';
-  grid-area: search;
-  column-gap: 15px;
-  row-gap: 15px;
-  box-sizing: border-box;
-  font-size: 16px;
-  margin: 0;
-}
-
-.input {
-  grid-area: search;
-  min-height: 40px;
-  border-radius: 5px;
-  box-sizing: border-box;
-  padding: 0 12px;
-  background-color: whitesmoke;
-  font-size: 16px;
-  margin: 0;
-  border: 2px solid dodgerblue;
-}
-
 .list {
   list-style-type: none;
   text-align: left;
   padding: 0;
   grid-area: list;
   border-radius: 5px;
-  background-color: whitesmoke;
-}
-
-.message-rule {
-  grid-area: message;
-  height: 16px;
-  font-size: 12px;
-  line-height: auto;
-  color: gray;
-  margin: 0;
-}
-
-.warn {
-  color: red;
-  text-decoration: underline;  
+  background-color: rgba(245, 245, 245, .9);
 }
