--- a/src/components/CountryDetails/CountryDetails.css
+++ b/src/components/CountryDetails/CountryDetails.css
@@ -1,11 +1,16 @@
 .search-result {
-  display: grid;
+  display: none;
   grid-template-columns: repeat(6, 1fr);
   padding: 0;
   list-style-type: none;
+  /* border-top: 2px solid #fff; */
+  border-top: 1px solid rgba(82, 95, 55, .2);
+  border-bottom: 1px solid rgba(82, 95, 55, .2);
+  box-shadow: inset 0 2px 5px 0 rgba(82, 95, 55, .1);
+  background-color: rgb(255, 251, 245);
 }
 
-.search-result li {
+.search-result__text {
   font-size: 16px;
   line-height: 24px;
   margin: 0;
@@ -13,12 +18,18 @@
   padding: 5px;
 }
 
-.search-result_header {
+.search-result__text p {
+  padding: 0;
+}
+
+.search-result__header {
   color: rgba(82, 95, 55, 1);
   font-weight: bold;
   border-bottom: 1px solid #61dafb;
+  text-align: center;
+  padding: 5px;
 }
 
-.search-result-item {
-    
+.isShown {
+  display: grid;
 }
