--- a/src/components/CountryDetails/CountryDetails.css
+++ b/src/components/CountryDetails/CountryDetails.css
@@ -1,20 +1,27 @@
 .search-result {
   display: none;
-  grid-template-columns: repeat(6, 1fr);
   padding: 0;
   list-style-type: none;
-  /* border-top: 2px solid #fff; */
   border-top: 1px solid rgba(82, 95, 55, .2);
   border-bottom: 1px solid rgba(82, 95, 55, .2);
   box-shadow: inset 0 2px 5px 0 rgba(82, 95, 55, .1);
   background-color: rgb(255, 251, 245);
+
+  font-size: 16px;
+  line-height: 24px;
+  text-align: center;
+}
+
+.search-result.desktop {
+  grid-template-columns: repeat(6, 1fr);
+}
+
+.search-result.mobile {
+  grid-template-columns: repeat(2, 1fr);
 }
 
 .search-result__text {
-  font-size: 16px;
-  line-height: 24px;
   margin: 0;
-  text-align: center;
   padding: 5px;
 }
 
@@ -26,10 +33,29 @@
   color: rgba(82, 95, 55, 1);
   font-weight: bold;
   border-bottom: 1px solid #61dafb;
-  text-align: center;
   padding: 5px;
 }
 
-.isShown {
-  display: grid;
+@media (max-width: 480px) {
+  .search-result.desktop {
+    display: none;
+  }
+  .search-result:last-of-type {
+    border-bottom: 1px solid transparent;
+  }
+  .search-result__header {
+    border-bottom: 1px solid transparent;
+  }
+  .isShown {
+    display: grid;
+  }
+}
+
+@media (min-width: 480px) {
+  .search-result.mobile {
+    display: none;
+  }
+  .isShown {
+    display: grid;
+  }
 }
