--- a/src/components/CountryDetails/CountryDetails.css
+++ b/src/components/CountryDetails/CountryDetails.css
@@ -5,7 +5,7 @@
   border-top: 1px solid rgba(82, 95, 55, .2);
   border-bottom: 1px solid rgba(82, 95, 55, .2);
   box-shadow: inset 0 2px 5px 0 rgba(82, 95, 55, .1);
-  background-color: rgb(255, 251, 245);
+  background-color: rgba(255, 251, 245, .8);
 
   font-size: 16px;
   line-height: 24px;
