--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -40,6 +40,9 @@
 }
 
 .preloader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 10px;
   grid-area: spinner;
 }
