--- a/src/components/SearchResult/SearchResult.css
+++ b/src/components/SearchResult/SearchResult.css
@@ -6,10 +6,16 @@
   box-sizing: border-box;
   align-items: center;
   cursor: pointer;
+  outline: none;
 }
 
 .item-container:hover .text {
   color: rgba(82, 95, 55, 0.8);
+}
+
+.item-container:focus {
+  box-shadow: 0 0 0 1px rgba(82, 95, 55, 0.3);
+  border-radius: 3px;
 }
 
 .flag {
